<resources>
    <string name="app_name" translatable="false">ChessMate</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmation">Confirmation</string>
    <string name="string_not_found">String not found</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_puzzles">Puzzles</string>
    <string name="bottom_nav_learn">Lessons</string>
    <string name="bottom_nav_profile">Profile</string>
    <string name="bottom_nav_more">More</string>
    <string name="title_settings_menu">Settings Menu</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="settings_activity_title">Settings</string>
    <string name="general_header">General</string>
    <string name="theme_title">App theme selection</string>
    <string name="theme_summary">Personalize your app\'s look and feel by choosing between different themes.</string>
    <string name="theme_day">Day</string>
    <string name="theme_night">Night</string>
    <string name="theme_day_night">System-based</string>
    <string name="pref_theme_key" translatable="false">app_theme</string>
    <string name="default_theme_value" translatable="false">day_night</string>
    <string name="color_title">Select your app\'s theme color</string>
    <string name="color_summary">Choose from seven different colors to customize the app\'s theme to your liking.</string>
    <string name="colorTeal">Teal</string>
    <string name="colorIndigo">Indigo</string>
    <string name="colorDarkPurple">Dark Purple</string>
    <string name="colorBlue">Blue</string>
    <string name="colorGreen">Green</string>
    <string name="colorRed">Red</string>
    <string name="colorPink">Pink</string>
    <string name="pref_color_key" translatable="false">app_color</string>
    <string name="default_color_value" translatable="false">teal</string>
    <string name="create_new_profile">Create New Profile</string>
    <string name="rating_title">Rating</string>
    <string name="games_played_title">Games Played</string>
    <string name="puzzles_played_title">Puzzles Played</string>
    <string name="lessons_taken_title">Lessons Taken</string>
    <string name="level_no_colon">Level</string>
    <string name="profile_description">Earn rating points by solving puzzles, taking lessons, and playing against the bot! The more you play and learn, the more rating points you earn, allowing you to level up and unlock more puzzles and lessons.</string>
    <string name="level_rating_dist_title">Rating point distribution for each level:</string>
    <string name="level_beginner_rating_dist">&#8226; Beginner level is between 400 and 800 points</string>
    <string name="level_intermediate_rating_dist">&#8226; Intermediate level is between 800 and 1200 points</string>
    <string name="level_advanced_rating_dist">&#8226; Advanced level is between 1200 and 1600 points</string>
    <string name="chess_com_title" translatable="false">Chess.com</string>
    <string name="lichess_org_title" translatable="false">Lichess.org</string>
    <string name="agadmator_title" translatable="false">Agadmator (YouTube)</string>
    <string name="gotham_chess_title" translatable="false">GothamChess (YouTube)</string>
    <string name="find_me_on_chess_com_title">Find me on Chess.com</string>
    <string name="play">Play</string>
    <string name="welcome">Welcome to ChessMate!</string>
    <string name="create_profile_to_start">Please create a profile. Whether you want to improve your skills or simply enjoy a game, the chessboard is all yours!</string>
    <string name="check_out_themes">Select from various app, chess and piece themes.</string>
    <string name="to_settings">To theme settings</string>
    <string name="failed_to_insert_user">Failed to insert user!</string>
    <string name="no_active_profile">Failed to find an active user! Guest profile loaded.</string>
    <string name="unexpected_error">An unexpected error occurred. Please attempt to create a new profile.</string>
    <string name="profile_change_error">An unexpected error occurred while changing profiles. Please attempt to change it again.</string>
    <string name="profile_delete_error">An unexpected error occurred while deleting profile. Please attempt to delete it again.</string>
    <string name="create_profile_title">Profile Creation</string>
    <string name="enter_username">Username</string>
    <string name="beginner_level">Beginner</string>
    <string name="intermediate_level">Intermediate</string>
    <string name="advanced_level">Advanced</string>
    <string name="start_at_beginner">Start at 400 rating</string>
    <string name="start_at_intermediate">Start at 800 rating</string>
    <string name="start_at_advanced">Start at 1200 rating</string>
    <string name="cancel_button">Cancel</string>
    <string name="create_profile_button">Create Profile</string>
    <string name="missing_username">You have to enter your username!</string>
    <string name="why_choose_beginner">Choose \"Beginner\" if you are just starting out with chess and learning the basic moves and rules.</string>
    <string name="why_choose_intermediate">Choose \"Intermediate\" if you know the rules and some basic strategies but want to improve your skills.</string>
    <string name="why_choose_advanced">Choose \"Advanced\" if you know different openings, strategies, and tactics.</string>
    <string name="choose_profile_title">Choose a Profile</string>
    <string name="change_profile_dialog_description">Are you sure you want to change the user profile?</string>
    <string name="delete_profile_dialog_description">Are you sure you want to delete the user profile? This action will redirect you to the Choose Profile screen.</string>
    <string name="new_game">New Game</string>
    <string name="start_game">Start Game</string>
    <string name="bot_search_depth">Bot Search Depth</string>
    <string name="start_as_random">Random starting side</string>
    <string name="start_as_white">Start as white</string>
    <string name="start_as_black">Start as black</string>
    <string name="your_turn">Your Turn</string>
    <string name="bot_turn">Bot\'s Turn</string>
    <string name="resign">Resign</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="continue_chess">Continue</string>
    <string name="move_tracker">Move Tracker</string>
    <string name="one" translatable="false">1.</string>
    <string name="empty_move" translatable="false">---</string>
    <string name="to_homepage">To Homepage</string>
    <string name="game_over">Game Over</string>
    <string name="game_won">You Won</string>
    <string name="game_lost">You Lost</string>
    <string name="game_tie">Tie</string>
    <string name="start_from_a_position">Start from a position (optional)</string>
    <string name="load_FEN">Load FEN:</string>
    <string name="FEN" translatable="false">FEN</string>
    <string name="invalid_FEN_string">FEN string format is invalid.</string>
    <string name="valid_FEN_string_illegal_position">FEN string format is valid but represents an illegal position or a checkmated player.</string>
    <string name="illegal_board_position_in_editor">The position is illegal. The FEN string will not be copied onto the clipboard.</string>
    <string name="board_editor_title">Board Editor</string>
    <string name="white_king_side_castle">White O-O</string>
    <string name="white_queen_side_castle">White O-O-O</string>
    <string name="black_king_side_castle">Black O-O</string>
    <string name="black_queen_side_castle">Black O-O-O</string>
    <string name="white_to_play">White to play</string>
    <string name="black_to_play">Black to play</string>
    <string name="plain">Plain</string>
    <string name="wood">Wood</string>
    <string name="marble">Marble</string>
    <string name="modern" translatable="false">Modern</string>
    <string name="fresca" translatable="false">Fresca</string>
    <string name="governor" translatable="false">Governor</string>
    <string name="pixel" translatable="false">Pixel</string>
    <string name="pref_chessboard_theme_key" translatable="false">chessboard_theme</string>
    <string name="default_chessboard_theme_value" translatable="false">plain</string>
    <string name="pref_piece_theme_key" translatable="false">piece_theme</string>
    <string name="default_piece_theme_value" translatable="false">plain</string>
    <string name="chessboard_title">Chessboard theme selection</string>
    <string name="chessboard_summary">Customize your chessboard\'s appearance by selecting from various themes.</string>
    <string name="piece_title">Piece theme selection</string>
    <string name="piece_summary">Customize your pieces appearance by selecting from various themes.</string>
    <string name="puzzle_lock_message">Level up to unlock new puzzles.</string>
    <string name="beginner_puzzles">Beginner</string>
    <string name="intermediate_puzzles">Intermediate</string>
    <string name="advanced_puzzles">Advanced</string>
    <string name="puzzle_text">Puzzle</string>
    <string name="login_to_access_solve_puzzles_message">Please log in to access and solve puzzles!</string>
    <string name="previous_page">Previous page</string>
    <string name="next_page">Next page</string>
    <string name="page_indicator_text">Page %1$d / %2$d</string>
    <string name="solved_all_puzzles_count">All puzzles: %1$d out of 300 solved</string>
    <string name="solved_beginner_puzzles_count">Beginner puzzles: %1$d out of 100 solved</string>
    <string name="solved_intermediate_puzzles_count">Intermediate puzzles: %1$d out of 100 solved</string>
    <string name="solved_advanced_puzzles_count">Advanced puzzles: %1$d out of 100 solved</string>
    <string name="find_the_best_move">Find the best move for %1$s</string>
    <string name="for_white">white</string>
    <string name="for_black">black</string>
    <string name="previous_puzzle">Previous puzzle</string>
    <string name="puzzle_hint">Hint</string>
    <string name="next_puzzle">Next puzzle</string>
    <string name="incorrect_solution">Wrong Move</string>
    <string name="puzzle_solved_text">Puzzle Solved</string>
    <string name="chess_basics_lessons">Chess basics</string>
    <string name="chess_pieces_title">Chess Pieces</string>
    <string name="fundamentals_title">Fundamentals</string>
    <string name="lesson_pawn_title">The pawn</string>
    <string name="lesson_knight_title">The knight</string>
    <string name="lesson_bishop_title">The bishop</string>
    <string name="lesson_rook_title">The rook</string>
    <string name="lesson_queen_title">The queen</string>
    <string name="lesson_king_title">The king</string>
    <string name="lesson_capture_title">Capture</string>
    <string name="lesson_protection_title">Protection</string>
    <string name="lesson_check_title">Check</string>
    <string name="lesson_get_out_of_check_title">Get out of check</string>
    <string name="lesson_checkmate_title">Checkmate</string>
    <string name="lesson_castling_title">Castling</string>
    <string name="lesson_en_passant_title" translatable="false">En passant</string>
    <string name="lesson_stalemate_title">Stalemate</string>
    <string name="lesson_piece_value_title">Piece value</string>
    <string name="lesson_check_in_two_title">Check in two</string>
    <string name="coordinate_settings_title">Coordinate Settings</string>
    <string name="save">Save</string>
    <string name="show_coordinates">Show coordinates</string>
    <string name="show_pieces">Show pieces</string>
    <string name="play_as_white">Play as white</string>
    <string name="play_as_black">Play as black</string>
    <string name="enter_minutes">Minutes (0–5)</string>
    <string name="enter_seconds">Seconds (0–59)</string>
    <string name="adjust_timer">Adjust timer</string>
</resources>