<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/general_header"
        app:iconSpaceReserved="false">

        <ListPreference
            android:defaultValue="@string/default_theme_value"
            android:entries="@array/pref_app_theme_entries"
            android:entryValues="@array/pref_app_theme_values"
            android:key="@string/pref_theme_key"
            app:title="@string/theme_title"
            app:summary="@string/theme_summary"
            app:iconSpaceReserved="false"
            />

        <ListPreference
            android:defaultValue="@string/default_color_value"
            android:entries="@array/pref_app_color_entries"
            android:entryValues="@array/pref_app_color_values"
            android:key="@string/pref_color_key"
            app:title="@string/color_title"
            app:summary="@string/color_summary"
            app:iconSpaceReserved="false"
            />

        <ListPreference
            android:defaultValue="@string/default_chessboard_theme_value"
            android:entries="@array/pref_chessboard_theme_entries"
            android:entryValues="@array/pref_chessboard_theme_values"
            android:key="@string/pref_chessboard_theme_key"
            android:title="@string/chessboard_title"
            android:summary="@string/chessboard_summary"
            app:iconSpaceReserved="false"
            />

        <ListPreference
            android:defaultValue="@string/default_piece_theme_value"
            android:entries="@array/pref_piece_theme_entries"
            android:entryValues="@array/pref_piece_theme_values"
            android:key="@string/pref_piece_theme_key"
            android:title="@string/piece_title"
            android:summary="@string/piece_summary"
            app:iconSpaceReserved="false"
            />

    </PreferenceCategory>

</PreferenceScreen>