<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_fragment_home"
        android:icon="@drawable/ic_home_24"
        android:title="@string/bottom_nav_home"/>

    <item
        android:id="@+id/nav_fragment_puzzles"
        android:icon="@drawable/ic_puzzle_24"
        android:title="@string/bottom_nav_puzzles"/>

    <item
        android:id="@+id/nav_fragment_learn"
        android:icon="@drawable/ic_learn_24"
        android:title="@string/bottom_nav_learn"/>

    <item
        android:id="@+id/nav_fragment_profile"
        android:icon="@drawable/ic_profile_24"
        android:title="@string/bottom_nav_profile"/>

    <item
        android:id="@+id/nav_fragment_more"
        android:icon="@drawable/ic_more_24"
        android:title="@string/bottom_nav_more"/>

</menu>